fix message of error version mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -930,6 +930,9 @@ input[type=number] {
 }
 
 @media (max-width: 576px) {
+  .help-block {
+    margin-left: 0px;
+  }
   .register__container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
